Two fixes for bugs: - left align tools on small screens - submenu in map panels now open to the left

--- a/web-ui/src/main/resources/catalog/style/gn_viewer.less
+++ b/web-ui/src/main/resources/catalog/style/gn_viewer.less
@@ -215,6 +215,7 @@
     }
     @media screen and (max-height: 768px) {
       left: @viewport-padding;
+      grid-template-columns: 0 2.8em;
       .badge-right {
         margin-top: -30px;
         display: inline-block;
@@ -425,6 +426,8 @@
       .dropdown {
         .dropdown-menu {
           min-width: 16em;
+          right: 0;
+          left: auto;
         }
         .gn-padding-left {
           padding-left: 20px !important;
